app/src/main/java/com/example/bookclub/errors/NewPasswordNotMatchedException.java
package com.example.bookclub.errors;

public class NewPasswordNotMatchedException extends RuntimeException {
    public NewPasswordNotMatchedException() {
        super("NewPassword not matched");
    }
}
